[tool.poetry]
name = "juju-cve-tool"
version = "0.1.0"
description = "A simple tool to identify CVEs across Juju environments and generate scripts to resolve them through updates"
authors = ["John P. Lettman <the@johnlettman.com>"]
readme = "README.md"
repository = "https://github.com/johnlettman/jujucvetool"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Operating System :: POSIX :: Linux",
]

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.7.1"
click = "^8.1.7"
rich-click = "^1.8.3"
fabric = "^3.2.2"
invoke = "^2.2.0"

# cvescan and friends
cvescan = { git = "https://github.com/canonical/sec-cvescan" }
python-apt = { git = "https://git.launchpad.net/python-apt", branch = "2.4.y" }
validators = "^0.33.0"
vistir = "^0.8.0"
ust-download-cache = "^2.1.0"
tabulate = "^0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
